syntax = "proto3";

option java_multiple_files = true;
option java_package = "vn.elca.training.proto.employer";

enum PensionTypeProto {
    NONE = 0;
    REGIONAL = 1;
    PROFESSIONAL = 2;
}

message Empty {}

message EmployerId {
    uint64 id = 1;
}

message EmployerResponse {
    uint64 id = 1;
    string created_date = 2;
    string updated_date = 3;
    PensionTypeProto pension_type = 4;
    string number = 5;
    string name = 6;
    string ide_number = 7;
    string expired_date = 9;
}

message EmployerListResponse {
    repeated EmployerResponse employers = 1;
}

service EmployerService {
    rpc GetEmployerById (EmployerId) returns (EmployerResponse) {};
    rpc GetEmployers (Empty) returns (EmployerListResponse) {};
}